--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-uglify": "^0.11.0",
+    "grunt-eslint": "^17.3.1",
     "load-grunt-tasks": "^3.4.0"
   }
 }
