--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "license": "MIT",
   "version": "0.1.0",
   "devDependencies": {
+    "coffee-script": "^1.10.0",
+    "coffeelint": "^1.14.2",
     "grunt": "^0.4.5",
+    "grunt-coffeelint": "0.0.13",
+    "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-uglify": "^0.11.0",
-    "grunt-eslint": "^17.3.1",
     "load-grunt-tasks": "^3.4.0"
-  }
+  },
+  "dependencies": {}
 }
