--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-uglify": "^0.11.0",
+    "grunt-ftp-deploy": "^0.1.10",
     "load-grunt-tasks": "^3.4.0"
   },
   "dependencies": {}
