--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "inform",
   "description": "A library for ModPE scripts.",
   "license": "MIT",
-  "version": "1.0.0",
+  "version": "2.0.0",
+	"main": "build/inform.js",
   "devDependencies": {
     "coffee-script": "^1.10.0",
     "coffeelint": "^1.14.2",
